Added Seeder File, Updated README.md

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 PORT=3000
 JWT_SECRET="secretKeyGoesHere"
 JWT_EXPIRES_IN=86400
-DATABASE_URL="postgresql://kwabenaberko@localhost:5432/team_235"
+DATABASE_URL="postgresql://username@localhost:5432/team_235"
+ADMIN_SEEDER_PASSWORD="seedAdminPlainTextPasswordGoesHere"
