--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.1.0",
     "knex": "^0.21.5",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "objection": "^2.2.3",
     "passport": "^0.4.1",
@@ -55,6 +56,7 @@
     "@types/express": "^4.17.2",
     "@types/google-libphonenumber": "^7.4.19",
     "@types/jest": "^24.0.25",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^13.1.6",
     "@types/pg": "^7.14.4",
     "@types/supertest": "^2.0.8",
