--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "knex": "ts-node -r dotenv/config node_modules/knex/bin/cli.js --cwd ./src --knexfile ./shared/database/knexfile.ts",
-    "heroku-postbuild": "npm run build  && npm run knex migrate:latest"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
