--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "",
   "license": "MIT",
   "engines": {
-    "node": "14.x"
+    "node": "14.4.0",
+    "npm": "6.14.4"
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -14,15 +15,15 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "knex": "ts-node -r dotenv/config node_modules/knex/bin/cli.js --cwd ./src --knexfile ./shared/database/knexfile.ts",
-    "heroku-postbuild": "npm run build && npm run knex migrate:latest"
+    "knex": "ts-node -r dotenv/config node_modules/knex/bin/cli.js --cwd ./src --knexfile ./shared/database/knexfile.ts"
+    
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
